--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "c2-dialog",
-  "version": "1.0.9",
-  "description": "a react/redux dialog component",
+  "name": "c2-form",
+  "version": "1.0.0",
+  "description": "a react/redux form component",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ClearC2/c2-dialog"
+    "url": "https://github.com/ClearC2/c2-form"
   },
   "main": "lib/index.js",
   "scripts": {
