feat(with-form): start non-redux withForm HOC

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "cd example && webpack-dev-server --inline --content-base dist --history-api-fallback --port 8088",
     "build": "babel -d lib/ src/",
     "lint": "eslint",
-    "test": "mocha --require babel-polyfill --require babel-register --require ./test/test_helper.js",
+    "test": "jest",
     "test:report": "nyc --reporter=html npm test",
     "cm": "git-cz",
     "semantic-release": "semantic-release"
@@ -46,17 +46,16 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "c2-semantic-release": "ClearC2/c2-semantic-release#^1.0.0",
-    "chai": "^4.1.2",
-    "chai-immutable": "^1.6.0",
     "css-loader": "^0.28.1",
     "eslint-config-c2-react": "^1.4.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "immutable": "^3.8.2",
-    "mocha": "^5.0.0",
+    "jest": "^23.6.0",
     "nyc": "^12.0.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-testing-library": "^5.2.3",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
     "style-loader": "^0.17.0",
