--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,12 @@
   ],
   "plugins": [
     "transform-class-properties"
-  ]
+  ],
+  "env": {
+    "production": {
+      "ignore": [
+        "**/__tests__/*.js"
+      ]
+    }
+  }
 }
