--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "cd example && webpack-dev-server --inline --content-base dist --history-api-fallback --port 8088",
-    "build": "babel -d lib/ src/",
+    "build": "yarn clean && NODE_ENV=production babel -d lib/ src/",
+    "clean": "rimraf lib",
     "lint": "eslint",
     "test": "jest",
-    "test:report": "nyc --reporter=html npm test",
+    "test:report": "yarn test --coverage",
     "cm": "git-cz",
     "semantic-release": "semantic-release"
   },
@@ -52,13 +53,13 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "immutable": "^3.8.2",
     "jest": "^23.6.0",
-    "nyc": "^12.0.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-testing-library": "^5.2.3",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
+    "rimraf": "^2.6.2",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.0",
     "webpack-dev-server": "^2.4.5"
