--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@clearc2/c2-react-config": "^3.0.3",
     "@reactions/component": "^2.0.2",
+    "@testing-library/react": "^8.0.2",
     "babel-plugin-module-resolver": "^3.2.0",
     "c2-semantic-release": "ClearC2/c2-semantic-release#^2.0.0",
     "husky": "^2.5.0",
@@ -57,7 +58,6 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
-    "react-testing-library": "^6.0.0",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
     "rimraf": "^2.6.2"
