--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "type": "git",
     "url": "https://github.com/ClearC2/c2-form"
   },
-  "main": "lib/index.js",
-  "module": "lib/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/es/index.js",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
     "start": "cd example && webpack-dev-server --content-base dist --port 8088 --hot --env.mode development",
-    "build": "yarn clean && NODE_ENV=production babel -d lib/ src/",
-    "clean": "rimraf lib",
+    "build": "rimraf dist && npm run build:es && npm run build:cjs",
+    "build:es": "NODE_ENV=production babel src/ -d dist/es/",
+    "build:cjs": "NODE_ENV=production BABEL_MODULES=cjs babel src/ -d dist/cjs/",
     "lint": "eslint",
     "test": "jest",
     "test:report": "yarn test --coverage",
