--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,4 +22,4 @@ jobs:
       - run:
           command: yarn run semantic-release
           environment:
-            ASSETS: dist
+            ASSETS: dist,types
