--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   },
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
+  "types": "types/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "start": "cd example && webpack-dev-server --content-base dist --port 8088 --hot --env.mode development",
-    "build": "rimraf dist && npm run build:es && npm run build:cjs",
-    "build:es": "NODE_ENV=production babel src/ -d dist/es/",
-    "build:cjs": "NODE_ENV=production BABEL_MODULES=cjs babel src/ -d dist/cjs/",
+    "start": "cd example && webpack-dev-server --port 8088 --hot --mode development",
+    "build": "rimraf dist && npm run build:es && npm run build:cjs && npm run build:types",
+    "build:es": "NODE_ENV=production babel --extensions .js,.ts,.tsx --ignore '**/__tests__/*' src/ -d dist/es/",
+    "build:cjs": "NODE_ENV=production BABEL_MODULES=cjs babel --extensions .js,.ts,.tsx --ignore '**/__tests__/*' src/ -d dist/cjs/",
+    "build:types": "tsc --esModuleInterop --declaration src/useValues.ts --emitDeclarationOnly --declarationDir ./types",
+    "build:types-test": "tsc --jsx 'react-jsx' --esModuleInterop --declaration src/withThing.tsx --emitDeclarationOnly --declarationDir ./types",
     "lint": "eslint",
     "test": "jest",
     "test:report": "yarn test --coverage",
@@ -48,28 +51,33 @@
   "author": "David Adams",
   "license": "ISC",
   "devDependencies": {
-    "@clearc2/c2-react-config": "^3.0.3",
+    "@babel/preset-typescript": "^7.18.6",
+    "@clearc2/c2-react-config": "^8.0.1",
     "@reactions/component": "^2.0.2",
-    "@testing-library/react": "^8.0.2",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.4",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
     "c2-semantic-release": "ClearC2/c2-semantic-release#^2.0.0",
     "husky": "^2.5.0",
     "immutable": "^3.8.2",
-    "jest": "^24.8.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "immutable": "^3.0.0",
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0",
     "react-redux": "^4.0.0 || ^5.0.0"
   },
   "dependencies": {
-    "prop-types": "^15.0.0"
+    "prop-types": "^15.0.0",
+    "react-fast-compare": "^3.2.0"
   }
 }
