--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "immutable": "^3.8.2",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^7.1.3",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
@@ -73,7 +73,7 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "immutable": "^3.0.0 || ^4.0.0"
+    "immutable": "^3.0.0"
   },
   "dependencies": {
     "prop-types": "^15.0.0",
