--- a/package.json
+++ b/package.json
@@ -60,20 +60,21 @@
     "@types/react-dom": "^18.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
     "c2-semantic-release": "ClearC2/c2-semantic-release#^2.0.0",
-    "husky": "^8.0.1",
+    "husky": "^2.5.0",
     "immutable": "^3.8.2",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^7.1.3",
+    "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
     "rimraf": "^2.6.2",
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "immutable": "^3.0.0"
+    "immutable": "^3.0.0",
+    "react-redux": "^4.0.0 || ^5.0.0"
   },
   "dependencies": {
     "prop-types": "^15.0.0",
