--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
   },
   "peerDependencies": {
     "immutable": "^3.0.0",
-    "react-redux": "^4.0.0 || ^5.0.0"
+    "react-redux": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
   },
   "dependencies": {
     "prop-types": "^15.0.0",
