--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "immutable": "^3.0.0",
+    "immutable": "^3.0.0 || ^4.0.0",
     "react-redux": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
   },
   "dependencies": {
